@@ -1,9 +1,8 @@
-AUX patches/000_all_makefile-include-directory.patch 343 RMD160 d2f63ede9d9dbc6ec94ccede9177a5a15a678e62 SHA1 63f6090628109526eb7aca02081feaf2a1af0f6f SHA256 fadf02891dd78611790f6b59c2ba7ec5aaaa9767bbe779d97e6c3b38aaaa7b94
-MD5 b90ff7e76d6c548c562b6bb276ad28ae files/patches/000_all_makefile-include-directory.patch 343
-RMD160 d2f63ede9d9dbc6ec94ccede9177a5a15a678e62 files/patches/000_all_makefile-include-directory.patch 343
-SHA256 fadf02891dd78611790f6b59c2ba7ec5aaaa9767bbe779d97e6c3b38aaaa7b94 files/patches/000_all_makefile-include-directory.patch 343
+AUX patches/000_all_makefile-include-directory.patch 342 RMD160 ae8b7c2e628681fff153bfa10242e62df5ab2e10 SHA1 be4f203063e676dc022ce600e15479b6ea56b954 SHA256 2da16602ef3c4cb040ac80a9fed18660fadcae2e843f425da0872f50aa5356db
+MD5 d2a8db48485977f21067a20798219821 files/patches/000_all_makefile-include-directory.patch 342
+RMD160 ae8b7c2e628681fff153bfa10242e62df5ab2e10 files/patches/000_all_makefile-include-directory.patch 342
+SHA256 2da16602ef3c4cb040ac80a9fed18660fadcae2e843f425da0872f50aa5356db files/patches/000_all_makefile-include-directory.patch 342
 DIST VMware-server-1.0.0-28343.tar.gz 105298140 RMD160 ac3ba270717a18216c405d967f8535803ca68e3d SHA1 fc47b02b7bbb9fa793cc67f7b7a906448994a155 SHA256 c6583d04c083d54bdf74bc94705e0603c5d918df9756918d2053438d49c5641a
-DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
 EBUILD vmware-modules-1.0.0.11.ebuild 190 RMD160 95d8feb593a9a4b08aaf16455644126c3b16059e SHA1 2db26f11be81db98b004a45f897c84653ed48fb2 SHA256 8b98215ff54efb32e849bd10a4d613b572b01bd79e2485948b3242e653b1eb10
 MD5 0741e0040a72b54bf8a46596c724e5e0 vmware-modules-1.0.0.11.ebuild 190
 RMD160 95d8feb593a9a4b08aaf16455644126c3b16059e vmware-modules-1.0.0.11.ebuild 190
@@ -24,15 +23,15 @@ MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b0
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
-MD5 ba6f4b9f12358a7d5fd4d2aa7a7df366 files/digest-vmware-modules-1.0.0.11 274
-RMD160 dde69d8dc0b4f3d9a670d3a1fcf4dfaf797d8b2c files/digest-vmware-modules-1.0.0.11 274
-SHA256 0709bc0650eae2c2976c42f497ff0d5736bfa00de85d6c8c1c21173e38de5ff1 files/digest-vmware-modules-1.0.0.11 274
-MD5 ba6f4b9f12358a7d5fd4d2aa7a7df366 files/digest-vmware-modules-1.0.0.13 274
-RMD160 dde69d8dc0b4f3d9a670d3a1fcf4dfaf797d8b2c files/digest-vmware-modules-1.0.0.13 274
-SHA256 0709bc0650eae2c2976c42f497ff0d5736bfa00de85d6c8c1c21173e38de5ff1 files/digest-vmware-modules-1.0.0.13 274
+MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-vmware-modules-1.0.0.11 1
+RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-vmware-modules-1.0.0.11 1
+SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-vmware-modules-1.0.0.11 1
+MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-vmware-modules-1.0.0.13 1
+RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-vmware-modules-1.0.0.13 1
+SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-vmware-modules-1.0.0.13 1
 MD5 7fc48c3c75722b73d93380b1fd8e03bc files/digest-vmware-modules-1.0.0.15 286
 RMD160 0fc3318f94c5b514c129b1f115190de71e24ba63 files/digest-vmware-modules-1.0.0.15 286
 SHA256 ad3a748274560cafb765a5ff2510e3a3301cabe9ef08b9235ef542debbb27f6e files/digest-vmware-modules-1.0.0.15 286
-MD5 ba6f4b9f12358a7d5fd4d2aa7a7df366 files/digest-vmware-modules-1.0.0.8 274
-RMD160 dde69d8dc0b4f3d9a670d3a1fcf4dfaf797d8b2c files/digest-vmware-modules-1.0.0.8 274
-SHA256 0709bc0650eae2c2976c42f497ff0d5736bfa00de85d6c8c1c21173e38de5ff1 files/digest-vmware-modules-1.0.0.8 274
+MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-vmware-modules-1.0.0.8 1
+RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-vmware-modules-1.0.0.8 1
+SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-vmware-modules-1.0.0.8 1
