@@ -57,7 +57,7 @@ SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vm
 DIST VMware-workstation-3.2.1-2242.tar.gz 12577292 RMD160 f2a6c3cc38f3c3851446e8902237b958367293a1 SHA256 ec305ca65c2e513b5d809e59849176d15dcf6a8f88e3d9bc9ce8fdca59fc2dfc
 DIST VMware-workstation-4.5.3-19414.tar.gz 42444031 RMD160 0f0b7a2249a12b75c9d81b8906efb2e85e04878b SHA1 f277dd75d9050b90d339b7f126a8575188791fb3 SHA256 6873ff04a317e6d0cbf31d4dd2ffcacd99cd335fb329e47f2c5f924376ffdcd6
 DIST VMware-workstation-5.5.1-19175.tar.gz 100090786 RMD160 79735996e1d79e96783db7d2dac67b7b7f605f47 SHA1 ed90b829b62d371eeb83cc41cd7bfb32d2a2f6e7 SHA256 7346676d0ec1c72c3f8d3e4ced37311a63c99d757998b162a08724466504e2c3
-DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
+DIST vmware-any-any-update103.tar.gz 297151 RMD160 7c1bc9a175b62f5bc20aac8d9e6757fdb06923b4 SHA1 8fa0925ded011ec85d43ac651eb1b19baca2c987 SHA256 d20c6c7da0245fed18822fac87b4b2298bcec3d28765b27a2d026b3bd7485e43
 DIST vmware.png 470 RMD160 759a5530b3bb605e6bc2c1e203490163d320485d SHA1 2262b25fb3ec66ed7b209ff5205fb9b289ca1afc SHA256 9bec91ecc32fa913141ca303abf1abec988ebc7fb4f27389f173bf3493bffb9b
 EBUILD vmware-workstation-3.2.1.2242-r11.ebuild 2201 RMD160 f2ddbea543be0c9ea668a4cf901d5cbb11c0e1c8 SHA1 9925a5653216c5a4f28666b33e86b386bc5c1fcd SHA256 c0cdc9634abdc4f05e1d8da0e617b1900b55b1a58e9f699063b9ba398eb9c0ce
 MD5 bc4ff6386bffd22017f41788225adf70 vmware-workstation-3.2.1.2242-r11.ebuild 2201
@@ -79,12 +79,12 @@ MISC metadata.xml 339 RMD160 9f4931e525280fd376eb7ac3e42c369acd23a33e SHA1 3948d
 MD5 a4e5ebe5e931d6196fd49550e067b078 metadata.xml 339
 RMD160 9f4931e525280fd376eb7ac3e42c369acd23a33e metadata.xml 339
 SHA256 bb60a871a58964feaa59ec824a5d511455054461f0394a57a8c9ca019a0f4593 metadata.xml 339
-MD5 06613f1bd854b11e14774bbe05094e0e files/digest-vmware-workstation-3.2.1.2242-r11 688
-RMD160 15923ea2e0875879ebde850308f6a718c8f82fbd files/digest-vmware-workstation-3.2.1.2242-r11 688
-SHA256 25b5f843b78761e3e82bdde35dbd0f6a34fe98b69ec328429e989c00f7482c95 files/digest-vmware-workstation-3.2.1.2242-r11 688
-MD5 35adc6f03c0de1d5ad9f45cc5864c120 files/digest-vmware-workstation-4.5.3.19414-r4 774
-RMD160 f76ff1c6dd7ca511dcad74408060aa41fe77f794 files/digest-vmware-workstation-4.5.3.19414-r4 774
-SHA256 04b199e0a500a8184bc67bfc05b644d728291d6db704c2d40174f08c60697742 files/digest-vmware-workstation-4.5.3.19414-r4 774
-MD5 7e16d1df573c33f106193c1c5211b4be files/digest-vmware-workstation-5.5.1.19175-r7 575
-RMD160 c64ca9274b2acbab196011ad1dbb3e4a7de2cb82 files/digest-vmware-workstation-5.5.1.19175-r7 575
-SHA256 cb233f0c0052cb615d02f7fc2bb9d4e36f6fe91be8fcfbf211815e7228569244 files/digest-vmware-workstation-5.5.1.19175-r7 575
+MD5 ac97a48ace8e5af2f26f6c0fc4ae1d31 files/digest-vmware-workstation-3.2.1.2242-r11 688
+RMD160 50252e0242737fed5d9e7b93ea38283c9f07d253 files/digest-vmware-workstation-3.2.1.2242-r11 688
+SHA256 39184c69c8915987dea6dd15c13e53447d488d70f95969e04d1022aa27de256c files/digest-vmware-workstation-3.2.1.2242-r11 688
+MD5 d824d6c54ed8b9c8f4859139c25cf0f3 files/digest-vmware-workstation-4.5.3.19414-r4 774
+RMD160 3839da6aebd734de86efe4f6c54706992650203d files/digest-vmware-workstation-4.5.3.19414-r4 774
+SHA256 dce5520afd735a51a6b94fa90478a081a1701c5ce55a6114964613f2dbb64915 files/digest-vmware-workstation-4.5.3.19414-r4 774
+MD5 6afc2e5e180d5331c3cce59798fd6b20 files/digest-vmware-workstation-5.5.1.19175-r7 575
+RMD160 b72c76e37e209775ca7b2c4ef2ebbbbf81fc0fff files/digest-vmware-workstation-5.5.1.19175-r7 575
+SHA256 94eb77dd230b55ad324da3b58a3bd79371092d7732e584859115915f41443ba8 files/digest-vmware-workstation-5.5.1.19175-r7 575
